--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoIt MarkUp HW 06</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="css/styles_adaptive.css"> -->
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles_adaptive.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
 <!-- хедер -->
   <header class="header-body">
-    <div class="container container-header-menu"> 
+    <div class="container container-header-menu is-open"> 
       <nav class="nav-tittle">
         <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
           <ul class="ul-header-menu"> 
@@ -267,7 +267,6 @@
     <div class="container">
         <h2 class="h-main-two">Our Portfolio</h2>  <!--заголовок -->
  
-        <!-- тут зараза хочет список -->
         <ul class="ul-section-portfolio">
 
           <li class="li-portfolio">
@@ -416,6 +415,7 @@
   </footer>
 
 <!-- Модальне вікно -->
+
   <!-- <div class="backdrop is-open">
     <div class="modal">
 
