--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               <li  class="li-footer">
                 <a href="https://www.twitter.com/" target="_blank" class="background-sn-footer">
                   <svg class="social-link" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>tfolio
                   </svg></a>
               </li>
               <li  class="li-footer">
@@ -523,7 +523,7 @@
         </div>
         
 <!-- Форма для емейла-->
-        <div class="conteiner-form arrange">
+        <div class="conteiner-form">
           <p class="subscribe-text">Subscribe</p>
             <form class="form-subscribe">
 
