--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </button>
     </div>
 <!-- мобільне меню -->   <!-- is-open -->
-    <div class="mob-menu">
+    <div class="mob-menu is-open">
       <button type="button" class="button-close">
         <svg class="icon-close" width="8" height="8">
           <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
       </button>
-        <nav> 
+        
           <ul class="mob-menu-list"> 
             <li class="mob-menu-item"><a href="./index.html" class="mob-menu-link  blue">Studio</a></li>
             <li class="mob-menu-item"><a href="" class="mob-menu-link">Portfolio</a></li>
@@ -67,7 +67,7 @@
               <a href="mailto:info@devstudio.com" class="mob-adress-info">info@devstudio.com</a>
             </li>
           </ul>
-        </nav>
+        
         <!-- Соціальні мережі -->
         <ul class="mob-soc-links">
           <li class="mob-soc-item">
@@ -340,7 +340,7 @@
   <!-- четверта секція Our Portfolio-->
   <section class="section-portfolio"> 
     <div class="container">
-        <h2 class="h-main-two">Our Portfolio</h2>  <!--заголовок -->
+        <h2 class="h-main-two">Our Portfolio</h2>
  
         <ul class="ul-section-portfolio">
 
@@ -356,7 +356,9 @@
                 <source
                   srcset="./images/banking.jpg 1x, ./images/banking@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                <img src="./images/banking.jpg"  alt="Banking App" width="360" height="300">
+                <img 
+                sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                src="./images/banking.jpg"  alt="Banking App" width="288" height="280">
               </picture>
               <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -378,7 +380,9 @@
                 <source
                   srcset="./images/cashless.jpg 1x, ./images/cashless@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                <img src="./images/cashless.jpg"  alt="Сashless Payment" width="360" height="300">
+                <img 
+                sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                src="./images/cashless.jpg"  alt="Сashless Payment" width="288" height="280">
               </picture>
              <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -400,7 +404,9 @@
                 <source
                   srcset="./images/meditation.jpg 1x, ./images/meditation@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                  <img src="./images/meditation.jpg"  alt="Meditation App" width="360" height="300">
+                  <img                 
+                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                  src="./images/meditation.jpg"  alt="Meditation App" width="288" height="280">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -422,7 +428,9 @@
                 <source
                   srcset="./images/taxi.jpg 1x, ./images/taxi@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                  <img src="./images/taxi.jpg"  alt="Taxi Service" width="360" height="300">
+                  <img                
+                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                  src="./images/taxi.jpg"  alt="Taxi Service" width="288" height="280">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -444,7 +452,9 @@
                 <source
                   srcset="./images/screen.jpg 1x, ./images/screen@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                  <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                  <img                
+                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                  src="./images/screen.jpg" alt="Screen Illustrations" width="288" height="280">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -466,7 +476,9 @@
                 <source
                   srcset="./images/online.jpg 1x, ./images/online@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
-                  <img src="./images/online.jpg"  alt="Online Courses" width="360" height="300">
+                  <img 
+                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
+                  src="./images/online.jpg"  alt="Online Courses" width="288" height="280">
               </picture>
                <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -485,7 +497,7 @@
 
     <div class="container footer-info">
         <div class="footer-logo">
-          <a href="./index.html" class="logo">Web<span class="logo-studio-fooler">Studio</span></a>
+          <a href="./index.html" class="logoweb">Web<span class="logo-studio-footer">Studio</span></a>
           <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
 
