--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </button>
     </div>
 <!-- мобільне меню -->   <!-- is-open -->
-    <div class="mob-menu is-open">
+    <div class="mob-menu">
       <button type="button" class="button-close">
         <svg class="icon-close" width="8" height="8">
           <use href="./images/icons.svg#icon-close-black"></use>
