--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <picture>
                 <source
                   srcset="./images/banking-mob.jpg 1x, ./images/banking-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/banking-tab.jpg 1x, ./images/banking-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -357,8 +357,7 @@
                   srcset="./images/banking.jpg 1x, ./images/banking@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                 <img 
-                sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                src="./images/banking.jpg"  alt="Banking App" width="288" height="280">
+                src="./images/banking.jpg"  alt="Banking App" class="portfolio-img">
               </picture>
               <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -373,7 +372,7 @@
               <picture>
                 <source
                   srcset="./images/cashless-mob.jpg 1x, ./images/cashless-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/cashless-tab.jpg 1x, ./images/cashless-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -381,8 +380,7 @@
                   srcset="./images/cashless.jpg 1x, ./images/cashless@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                 <img 
-                sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                src="./images/cashless.jpg"  alt="Сashless Payment" width="288" height="280">
+                src="./images/cashless.jpg"  alt="Сashless Payment" class="portfolio-img">
               </picture>
              <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -397,7 +395,7 @@
               <picture>
                 <source
                   srcset="./images/meditation-mob.jpg 1x, ./images/meditation-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/meditation-tab.jpg 1x, ./images/meditation-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -405,8 +403,7 @@
                   srcset="./images/meditation.jpg 1x, ./images/meditation@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                   <img                 
-                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                  src="./images/meditation.jpg"  alt="Meditation App" width="288" height="280">
+                  src="./images/meditation.jpg"  alt="Meditation App" class="portfolio-img">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -421,7 +418,7 @@
               <picture>
                 <source
                   srcset="./images/taxi-mob.jpg 1x, ./images/taxi-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/taxi-tab.jpg 1x, ./images/taxi-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -429,8 +426,7 @@
                   srcset="./images/taxi.jpg 1x, ./images/taxi@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                   <img                
-                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                  src="./images/taxi.jpg"  alt="Taxi Service" width="288" height="280">
+                  src="./images/taxi.jpg"  alt="Taxi Service" class="portfolio-img">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -445,7 +441,7 @@
               <picture>
                 <source
                   srcset="./images/screen-mob.jpg 1x, ./images/screen-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/screen-tab.jpg 1x, ./images/screen-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -453,8 +449,7 @@
                   srcset="./images/screen.jpg 1x, ./images/screen@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                   <img                
-                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                  src="./images/screen.jpg" alt="Screen Illustrations" width="288" height="280">
+                  src="./images/screen.jpg" alt="Screen Illustrations" class="portfolio-img">
               </picture>
                 <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
@@ -469,7 +464,7 @@
               <picture>
                 <source
                   srcset="./images/online-mob.jpg 1x, ./images/online-mob@2x.jpg 2x"
-                  media="(min-width: 320px)"/>
+                  media="(max-width:767px)"/>
                 <source
                   srcset="./images/online-tab.jpg 1x, ./images/online-tab@2x.jpg 2x"
                   media="(min-width: 768px)"/>
@@ -477,8 +472,7 @@
                   srcset="./images/online.jpg 1x, ./images/online@2x.jpg 2x"
                   media="(min-width: 1158px)"/>
                   <img 
-                  sizes="(min-width: 320px) 288px, (min-width: 768px) 356px, 360px"
-                  src="./images/online.jpg"  alt="Online Courses" width="288" height="280">
+                  src="./images/online.jpg"  alt="Online Courses" class="portfolio-img">
               </picture>
                <p class="portfolio-text-wrap portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
