--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@
             <div class="portfolio-cover-wrap">
               <picture>
                 <source
-                  srcset="./images/taxi-mob.jpg 1x, ./images/taxi-mob@2x.jpg 2x"
+                srcset="./img/our-yachts/yacht-mob.png 1x, ./img/our-yachts/yacht@2x-mob.png 2x"
                   media="(max-width:767px)"/>
                 <source
-                  srcset="./images/taxi-tab.jpg 1x, ./images/taxi-tab@2x.jpg 2x"
+                srcset="./img/our-yachts/yacht-tab.png 1x, ./img/our-yachts/yacht@2x-tab.png 2x"
                   media="(min-width: 768px)"/>
                 <source
-                  srcset="./images/taxi.jpg 1x, ./images/taxi@2x.jpg 2x"
-                  media="(min-width: 1158px)"/>
+                srcset="./img/our-yachts/yacht-dec.png 1x, ./img/our-yachts/yacht@2x-dec.png 2x"
+                  media="(min-width: 1280px)"/>
                   <img                
                   src="./images/taxi.jpg"  alt="Taxi Service" class="portfolio-img">
               </picture>
